--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -81,3 +81,12 @@
     border-radius: 10px;
   }
 }
+
+@mixin container($size) {
+  width: 100%;
+  max-width: $size;
+  padding-left: var(--wrapper-padding);
+  padding-right: var(--wrapper-padding);
+  margin-left: auto;
+  margin-right: auto;
+}
